--- a/index.html
+++ b/index.html
@@ -8,6 +8,38 @@
         <title>Login</title>
     </head>
     <body>
-        
+        <div class="tudo">
+            <div class="arte">
+                <div>
+                    <img class="diagroma" src="img/Diagram2Fill.png" alt="diagroma">
+                </div>
+                <h1 class="top">Find 3D Plugins <br> FREE</h1>
+                <div class="astro">
+                    <img class="astroimg" src="img/Vectary texture.png" alt="Astro">
+                </div>
+                <div class="world">
+                    <img class="worldimg" src="img/Vectary texture2.png" alt="World">
+                </div>
+            </div>
+            <div class="principal">
+                <h1 class="create">Create Account</h1>
+                <div class="div-login">
+                    <img class="iconGoogle" src="img/google.png" alt="icon google">
+                    Sign up with google
+                </div>
+                <div class="div-login">
+                    <img class="iconFacebook" src="img/facebook.png" alt="icon facebook">
+                    Sign up with facebook
+                </div>
+                <p>OR</p>
+                <form action="castro.php" method="post">
+                    <input type="text" name="text" id="itext" placeholder="Full Name">
+                    <input type="email" name="email" id="iemail" placeholder="Full Name">
+                    <input type="password" name="password" id="ipassword" placeholder="Password">
+                    <input type="submit" value="Create Account">
+                </form>
+                <p>Already have an account? <a href="#">Login</a></p>
+            </div>
+        </div>
     </body>
 </html>
