--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div>
                     <img class="diagroma" src="img/Diagram2Fill.png" alt="diagroma">
                 </div>
-                <h1 class="top">Find 3D Plugins <br> FREE</h1>
+                <h1 class="h1-top">Find 3D Plugins <br> FREE</h1>
                 <div class="astro">
                     <img class="astroimg" src="img/Vectary texture.png" alt="Astro">
                 </div>
