--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
             <div class="principal">
                 <h1 class="create">Create Account</h1>
                 <div class="div-login">
-                    <div class="div-login-google">
+                    <div class="div-google">
                         <img class="iconGoogle" src="img/google.png" alt="icon google">
                         Sign up with google
                     </div>
-                    <div class="div-login-facebook">
+                    <div class="div-facebook">
                         <img class="iconFacebook" src="img/facebook.png" alt="icon facebook">
                         Sign up with facebook
                     </div>
                 </div>
-                <p class="OR">OR</p>
+                <p class="OR">-OR-</p>
                 <form action="castro.php" method="post">
                     <input type="text" name="text" id="itext" placeholder="Full Name"> <br>
                     <input type="email" name="email" id="iemail" placeholder="Full Name"><br>
