--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <title>Login</title>
     </head>
     <body>
@@ -35,9 +36,14 @@
                 </div>
                 <p class="OR">-OR-</p>
                 <form action="castro.php" method="post">
-                    <input type="text" name="text" id="itext" placeholder="Full Name"> <br>
-                    <input type="email" name="email" id="iemail" placeholder="Full Name"><br>
-                    <input type="password" name="password" id="ipassword" placeholder="Password"><br>
+                    <input type="text" name="text" id="itext" placeholder="Full Name">
+                    <input type="email" name="email" id="iemail" placeholder="Full Name">
+                    <input type="password" name="password" id="ipassword" placeholder="Password">
+                    <div class="icon">
+                        <span id="icons" class="material-symbols-outlined">
+                            visibility_off
+                        </span>
+                    </div>
                     <input type="submit" value="Create Account">
                 </form>
                 <p class="login">Already have an account? <a href="#">Login</a></p>
