--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <input type="text" name="text" id="itext" placeholder="Full Name">
                     <input type="email" name="email" id="iemail" placeholder="Full Name">
                     <input type="password" name="password" id="ipassword" placeholder="Password">
-                    <i class="bi bi-eye" id="icon" onclick="mostrasenha()"></i>
+                    <i class="bi bi-eye-slash" id="icon" onclick="mostrasenha()"></i>
                     <input type="submit" value="Create Account">
                 </form>
                 <p class="login">Already have an account? <a href="#">Login</a></p>
